Add 'lower_dim_fields' branch

--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -16,7 +16,7 @@
 
  ---- Template variables ----
 
-    - arg_fields: [{ "name": str, "dtype": str, "axes": str, "layout_id": int }]
+    - arg_fields: [{ "name": str, "dtype": str, "layout_id": int, "axes": [str] }]
     - constants: { name:str : str }
     - gt_backend: str
     - halo_sizes: [int]
@@ -43,8 +43,8 @@
         }
     }
     - stencil_unique_name: str
-    - tmp_fields: [{ "name": str, "dtype": str, "axes": str }]
-    - used_axes: [{ "name": str, "selector": str }]
+    - tmp_fields: [{ "name": str, "dtype": str, "axes": [str] }]
+    - used_axes: [{ "name": str, "selector": [str] }]
 #}
 
 {%- if gt_backend == "cuda" %}
@@ -91,7 +91,7 @@ using storage_info_t =
 {%- else %}
 using storage_info_{{ axes.name }}_t =
     gt::storage_traits<backend_t>::special_storage_info_t<
-        Id, gt::selector<{{ axes.selector }}>,
+        Id, gt::selector<{{ ", ".join(axes.selector) }}>,
 {%- endif %}
         gt::halo<0, 0, 0 /* not used */>>;
 {%- endfor %}
@@ -110,10 +110,10 @@ using data_store_{{ axes.name }}_t =
 // Placeholder definitions
 {% set arg_counter = 0 -%}
 {%- for field in arg_fields %}
-{%- if field.axes == "ijk" %}
+{%- if field.axes|length == 3 %}
 using p_{{ field.name }} = gt::arg<{{ arg_counter + loop.index0 }}, data_store_t<{{ field.dtype }}, {{ field.layout_id }}>>;
 {%- else %}
-using p_{{ field.name }} = gt::arg<{{ arg_counter + loop.index0 }}, data_store_{{ field.axes }}_t<{{ field.dtype }}, {{ field.layout_id }}>>;
+using p_{{ field.name }} = gt::arg<{{ arg_counter + loop.index0 }}, data_store_{{ "".join(field.axes).lower() }}_t<{{ field.dtype }}, {{ field.layout_id }}>>;
 {%- endif %}
 {%- endfor %}
 {% set arg_counter = arg_counter + arg_fields|length %}
@@ -123,10 +123,10 @@ using p_{{ param.name }} = gt::arg<{{ arg_counter + loop.index0 }}, gt::global_p
 {% set arg_counter = arg_counter + parameters|length %}
 {% if tmp_fields -%}
 {%- for field in tmp_fields %}
-{%- if field.axes == "ijk" %}
+{%- if field.axes|length == 3 %}
 using p_{{ field.name }} = gt::tmp_arg<{{ arg_counter + loop.index0 }}, data_store_t<{{ field.dtype }}, 0>>;
 {%- else %}
-using p_{{ field.name }} = gt::tmp_arg<{{ arg_counter + loop.index0 }}, data_store_{{ field.axes }}_t<{{ field.dtype }}, 0>>;
+using p_{{ field.name }} = gt::tmp_arg<{{ arg_counter + loop.index0 }}, data_store_{{ "".join(field.axes) }}_t<{{ field.dtype }}, 0>>;
 {%- endif %}
 {%- endfor %}
 {% set arg_counter = arg_counter + tmp_fields|length %}
@@ -185,26 +185,30 @@ auto make_grid(const std::array<gt::uint_t, 3>& compute_domain_shape) {
 
 {%- for axes in used_axes %}
 {%- if axes.name == "ijk" %}
-template<typename T, int Id>
+template<typename T, int Id, int N>
 data_store_t<T, Id> make_data_store(const BufferInfo& bi,
                                     const std::array<gt::uint_t, 3>& compute_domain_shape,
-                                    const std::array<gt::uint_t, 3>& origin) {
-    if (bi.ndim != 3) {
-        throw std::runtime_error("Wrong number of dimensions [" +
-                                 std::to_string(bi.ndim) +
-                                 " != " + std::to_string(3) + "]");
-    }
-
+                                    const std::array<gt::uint_t, N>& origin,
+                                    const char* axes) {
     // ptr, dims and strides are "outer domain" (i.e., compute domain + halo
     // region). The halo region is only defined through `make_grid` (and
     // currently, in the storage info)
     gt::array<gt::uint_t, 3> dims{};
     gt::array<gt::uint_t, 3> strides{};
     T* ptr = static_cast<T*>(bi.ptr);
-    for (int i = 0; i < 3; ++i) {
-        strides[i] = bi.strides[i] / sizeof(T);
-        ptr += strides[i] * origin[i];
-        dims[i] = compute_domain_shape[i]+2*origin[i];
+    const std::array<char, 3> all_axes = {'I', 'J', 'K'};
+    gt::uint_t curr_stride = 0, curr_origin = 0;
+    for (int i = 0, j = 0; i < 3; ++i) {
+        if (j < N && axes[j] == all_axes[i]) {
+            curr_stride = bi.strides[j];
+            curr_origin = origin[j];
+            ++j;
+        } else {
+            curr_origin = 0;
+        }
+        strides[i] = curr_stride / sizeof(T);
+        dims[i] = compute_domain_shape[i] + 2 * curr_origin;
+        ptr += strides[i] * curr_origin;
     }
     return data_store_t<T, Id>{storage_info_t<Id>{dims, strides}, ptr,
 {%- if gt_backend == "cuda" %}
@@ -214,22 +218,27 @@ data_store_t<T, Id> make_data_store(const BufferInfo& bi,
 {%- endif %}
 }
 {%- else %}
-template<typename T, int Id>
+template<typename T, int Id, int N>
 data_store_{{ axes.name }}_t<T, Id> make_data_store_{{ axes.name }}(const BufferInfo& bi,
-                                       const std::array<gt::uint_t, 3>& compute_domain_shape,
-                                       const std::array<gt::uint_t, 3>& origin) {
-    if (bi.ndim != 3) {
-        throw std::runtime_error("Wrong number of dimensions [" +
-                                 std::to_string(bi.ndim) +
-                                 " != " + std::to_string(3) + "]");
-    }
+                                    const std::array<gt::uint_t, 3>& compute_domain_shape,
+                                    const std::array<gt::uint_t, N>& origin,
+                                    const char* axes) {
     gt::array<gt::uint_t, 3> dims{};
     gt::array<gt::uint_t, 3> strides{};
     T* ptr = static_cast<T*>(bi.ptr);
-    for (int i = 0; i < 3; ++i) {
-        strides[i] = bi.strides[i] / sizeof(T);
-        ptr += strides[i] * origin[i];
-        dims[i] = compute_domain_shape[i]+2*origin[i];
+    const std::array<char, 3> all_axes = {'I', 'J', 'K'};
+    gt::uint_t curr_stride = 0, curr_origin = 0;
+    for (int i = 0, j = 0; i < 3; ++i) {
+        if (j < N && axes[j] == all_axes[i]) {
+            curr_stride = bi.strides[j];
+            curr_origin = origin[j];
+            ++j;
+        } else {
+            curr_origin = 0;
+        }
+        strides[i] = curr_stride / sizeof(T);
+        dims[i] = compute_domain_shape[i] + 2 * curr_origin;
+        ptr += strides[i] * curr_origin;
     }
     return data_store_{{ axes.name }}_t<T, Id>{storage_info_{{ axes.name }}_t<Id>{dims, strides}, ptr,
 {%- if gt_backend == "cuda" %}
@@ -256,7 +265,7 @@ void run(const std::array<gt::uint_t, 3>& domain,
 {%- set comma = joiner(", ") %}
 {%- for field in arg_fields -%}
          {{- comma() }}
-         const BufferInfo& bi_{{ field.name }} {{- comma() -}} const std::array<gt::uint_t, 3>& {{ field.name }}_origin
+         const BufferInfo& bi_{{ field.name }} {{- comma() -}} const std::array<gt::uint_t, {{ field.axes | length }}>& {{ field.name }}_origin
 {%- endfor %}
 {%- for param in parameters %}
          {{- comma() }}
@@ -282,10 +291,10 @@ void run(const std::array<gt::uint_t, 3>& domain,
 #}
     // Initialize data stores from input buffers
 {%- for field in arg_fields %}
-{%- if field.axes == "ijk" %}
-    auto ds_{{ field.name }} = make_data_store<{{ field.dtype }}, {{ field.layout_id }}>(bi_{{ field.name }}, domain, {{ field.name }}_origin);
+{%- if field.axes|length == 3 %}
+    auto ds_{{ field.name }} = make_data_store<{{ field.dtype }}, {{ field.layout_id }}, {{ field.axes | length }}>(bi_{{ field.name }}, domain, {{ field.name }}_origin, "{{ "".join(field.axes) }}");
 {%- else %}
-    auto ds_{{ field.name }} = make_data_store_{{ field.axes }}<{{ field.dtype }}, {{ field.layout_id }}>(bi_{{ field.name }}, domain, {{ field.name }}_origin);
+    auto ds_{{ field.name }} = make_data_store_{{ "".join(field.axes).lower() }}<{{ field.dtype }}, {{ field.layout_id }}, {{ field.axes | length }}>(bi_{{ field.name }}, domain, {{ field.name }}_origin, "{{ "".join(field.axes) }}");
 {%- endif %}
 {%- endfor %}
 
