--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -321,11 +321,7 @@ void run(const std::array<gt::uint_t, MAX_DIM>& domain,
 {%- for field in arg_fields -%}
                      {{ comma() }}p_{{ field.name }}()=ds_{{ field.name }}
 {%- endfor %});
-    // gt_computation_.sync_bound_data_stores();
-
-{%- for name in tmp_arg_fields %}
-    ds_{{ name }}.sync();
-{%- endfor %}
+        // computation_.sync_bound_data_stores();
 }
 
 }  // namespace {{ stencil_unique_name }}
