--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -318,7 +318,7 @@ void run(const std::array<gt::uint_t, MAX_DIM>& domain,
         {%- for stage in step %}
             {%- filter indent(width=extra_indent) %}
             {{- stage_comma() }}
-            gt::make_stage_with_extent<{{ stage }}_func, gt::extent<{{ stage_functors[stage].extent | join(", ") }}>>(
+            gt::make_stage_with_extent<{{ stage }}_func, gt::extent<{{ stage_functors[stage].extents | join(", ") }}>>(
                 p_{{ stage_functors[stage].args|map(attribute="name")|join("(), p_")}}()
             )
             {%- endfilter %}
