--- a/src/gt4py/backend/templates/bindings.cpp.in
+++ b/src/gt4py/backend/templates/bindings.cpp.in
@@ -16,7 +16,8 @@
 
  ---- Template variables ----
 
-    - allocated_fields: [{ "name": str, "dtype": str, "layout_id": int, "selector": [bool], "naxes": int }]
+    - api_fields: [{ "name": str, "dtype": str, "layout_id": int, "selector": [bool], "naxes": int }]
+    - arg_fields: [{ "name": str, "dtype": str, "layout_id": int, "selector": [bool], "naxes": int }]
     - gt_backend: str
     - module_name: str
     - parameters: [{ "name": str, "dtype": str }]
@@ -78,7 +79,7 @@ BufferInfo make_buffer_info(py::object& b) {
 
 void run_computation(const std::array<gt::uint_t, MAX_DIM>& domain,
 {%- set comma = joiner(", ") -%}
-{%- for field in allocated_fields -%}
+{%- for field in api_fields -%}
                      {{- comma() }}
                      py::object {{ field.name }}, const std::array<gt::uint_t, {{ field.naxes }}>& {{ field.name }}_origin
 {%- endfor -%}
@@ -94,13 +95,13 @@ void run_computation(const std::array<gt::uint_t, MAX_DIM>& domain,
     }
 
 
-{%- for field in allocated_fields %}
+{%- for field in api_fields %}
     auto bi_{{ field.name }} = make_buffer_info({{ field.name }});
 {%- endfor %}
 
     {{ stencil_unique_name }}::run(domain,
 {%- set comma = joiner(", ") -%}
-{%- for field in allocated_fields -%}
+{%- for field in api_fields -%}
         {{- comma() }}
         bi_{{ field.name }}, {{ field.name }}_origin
 {%- endfor -%}
@@ -123,7 +124,7 @@ PYBIND11_MODULE({{ module_name }}, m) {
     m.def("run_computation", &run_computation, "Runs the given computation",
           py::arg("domain"),
 {%- set comma = joiner(", ") -%}
-{%- for field in allocated_fields -%}
+{%- for field in api_fields -%}
           {{- comma() }}
           py::arg("{{ field.name }}") {{- comma() }} py::arg("{{ field.name }}_origin") {{- zero_origin }}
 {%- endfor -%}
