--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -50,13 +50,13 @@
                 "exec": str,
                 "steps": [str]
             },
-            "requires_positional": bool,
             "api_fields": [str],
             "arg_fields": [str],
-            "parameters": [str]
+            "parameters": [str],
+            "positional_axes": [str]
         }
     ]
-    - any_positional: bool
+    - positional_axes: [str]
     - stencil_unique_name: str
 #}
 
@@ -187,13 +187,11 @@ using p_{{ field.name}} = gt::arg<{{ arg_counter + loop.index0 }}, data_store_t_
 using p_{{ param.name }} = gt::arg<{{ arg_counter + loop.index0 }}, gt::global_parameter<{{ param.dtype }}>>;
 {%- endfor %}
 {% set arg_counter = arg_counter + parameters|length %}
-{%- if any_positional -%}
 // Positional indices
-{% for axis_name in axes_names %}
+{% for axis_name in positional_axes %}
 using p_domain_size_{{ axis_name }} = gt::arg<{{ arg_counter + loop.index0 }}, gt::global_parameter<gt::uint_t>>;
 {%- endfor %}
-{% set arg_counter = arg_counter + axes_names|length %}
-{%- endif -%}
+{% set arg_counter = arg_counter + positional_axes|length %}
 {% if tmp_fields -%}
 // Temporaries (all are are 3D storages)
 {%- for field in tmp_fields %}
@@ -285,15 +283,19 @@ void run(const std::array<gt::uint_t, MAX_DIM>& domain,
 {%- for field in api_fields %}
     auto ds_{{ field.name }} = make_data_store<{{ field.dtype }}, {{ arg_counter + loop.index0 }}, {{ field.naxes }}>(bi_{{ field.name }}, domain, {{ field.name }}_origin, gt::selector<{{ field.selector | join(", ") | lower }}>{});
 {%- endfor %}
+
+    // Create data stores for cross-computation temporaries
 {%- for field in arg_fields %}
     auto storage_info_{{ field.name }} = storage_info_t_{{ field.name }}({{ field.shape | join(", ") }});
     auto ds_{{ field.name }} = data_store_t_{{ field.name }}(storage_info_{{ field.name }}, 0., "{{ field.name }}");
 {%- endfor %}
+
+    // Create parameters
 {%- for param in parameters %}
     auto ps_{{ param.name }} = gt::make_global_parameter<{{ param.dtype }}>({{ param.name }});
 {%- endfor %}
 
-{%- for axis_name in axes_names %}
+{%- for axis_name in positional_axes %}
     auto ps_domain_size_{{ axis_name }} = gt::make_global_parameter(domain[{{ loop.index0 }}]);
 {%- endfor -%}
 
@@ -307,11 +309,9 @@ void run(const std::array<gt::uint_t, MAX_DIM>& domain,
 {%- for param in computation.parameters %}
         p_{{ param }}() = ps_{{ param }},
 {% endfor -%}
-{%- if computation.requires_positional -%}
-{%- for axis_name in axes_names %}
+{%- for axis_name in computation.positional_axes %}
         p_domain_size_{{ axis_name }}() = ps_domain_size_{{ axis_name }},
 {%- endfor -%}
-{%- endif -%}
 
     {%- set multistage_comma = joiner(",") -%}
     {%- for multistage in computation["multistages"] %}
